--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                     <div class="link">Все статьи</div>
                     <div class="link">Избранное</div>
                 </div>
-                <btn class="link--btn">User<img class="icon" src="/img/logout.svg" alt="" /></btn>
+                <btn class="link--btn">User<img class="icon" src="img/logout.svg" alt="" /></btn>
             </div>
         </header>
 
