change path to img

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <header class="header">
             <div class="header--logo">YourBlog</div>
             <div class="header--container">
-                <div class="burger"><img src="../img/menu.svg" alt="" /></div>
+                <div class="burger"><img src="img/menu.svg" alt="" /></div>
                 <div class="menu-wrapper">
                     <div class="link">Все статьи</div>
                     <div class="link">Избранное</div>
@@ -41,10 +41,10 @@
                             <div class="card--top-bar">
                                 <div class="card--type">UX/UI</div>
                                 <div class="card--remove-wrapper">
-                                    <div class="card--delete-icon"><img src="../img/trash.svg" alt=""></div>
+                                    <div class="card--delete-icon"><img src="img/trash.svg" alt=""></div>
                                 </div>
                             </div>
-                            <img src="../img/image_1.png" alt="">
+                            <img src="img/image_1.png" alt="">
                             <div class="card--content">
                                 <div class="card--date">2 августа, 2019</div>
                                 <div class="card--title">Что такое юзабилити-тестирование и как провести его правильно
@@ -65,10 +65,10 @@
                             <div class="card--top-bar">
                                 <div class="card--type">Разработка</div>
                                 <div class="card--remove-wrapper">
-                                    <div class="card--delete-icon"><img src="../img/trash.svg" alt=""></div>
+                                    <div class="card--delete-icon"><img src="img/trash.svg" alt=""></div>
                                 </div>
                             </div>
-                            <img src="../img/image_2.png" alt="">
+                            <img src="img/image_2.png" alt="">
                             <div class="card--content">
                                 <div class="card--date">2 августа, 2019</div>
                                 <div class="card--title">Как создать прототип мобильного приложения в 5 шагов</div>
@@ -86,10 +86,10 @@
                             <div class="card--top-bar">
                                 <div class="card--type">UX/UI</div>
                                 <div class="card--remove-wrapper">
-                                    <div class="card--delete-icon"><img src="../img/trash.svg" alt=""></div>
+                                    <div class="card--delete-icon"><img src="img/trash.svg" alt=""></div>
                                 </div>
                             </div>
-                            <img src="../img/image_3.png" alt="">
+                            <img src="img/image_3.png" alt="">
                             <div class="card--content">
                                 <div class="card--date">2 августа, 2019</div>
                                 <div class="card--title">Обзор 11 лучших портфолио UI-дизайнера: примеры, зачем нужно</div>
@@ -107,10 +107,10 @@
                             <div class="card--top-bar">
                                 <div class="card--type">Frontend</div>
                                 <div class="card--remove-wrapper">
-                                    <div class="card--delete-icon"><img src="../img/trash.svg" alt=""></div>
+                                    <div class="card--delete-icon"><img src="img/trash.svg" alt=""></div>
                                 </div>
                             </div>
-                            <img src="../img/image_1.png" alt="">
+                            <img src="img/image_1.png" alt="">
                             <div class="card--content">
                                 <div class="card--date">2 августа, 2019</div>
                                 <div class="card--title">Топ-5 JS-фреймворков для фронтенд-разработки в 2020 году</div>
@@ -128,10 +128,10 @@
                             <div class="card--top-bar">
                                 <div class="card--type">Тестирование</div>
                                 <div class="card--remove-wrapper">
-                                    <div class="card--delete-icon"><img src="../img/trash.svg" alt=""></div>
+                                    <div class="card--delete-icon"><img src="img/trash.svg" alt=""></div>
                                 </div>
                             </div>
-                            <img src="../img/image_2.png" alt="">
+                            <img src="img/image_2.png" alt="">
                             <div class="card--content">
                                 <div class="card--date">2 августа, 2019</div>
                                 <div class="card--title">Любому начинающему тестировщику</div>
@@ -153,8 +153,8 @@
                 <div class="link">Главная</div>
                 <div class="link">Яндекс.Практикум</div>
                 <div class="footer--social-wrapper">
-                    <div class="icon"><img src="../img/github.svg" alt="" /></div>
-                    <div class="icon"><img src="../img/fb.svg" alt="" /></div>
+                    <div class="icon"><img src="img/github.svg" alt="" /></div>
+                    <div class="icon"><img src="img/fb.svg" alt="" /></div>
                 </div>
             </div>
         </footer>
